change master.html from dev branch

--- a/master.html
+++ b/master.html
@@ -6,6 +6,6 @@
     <title>Branch Master</title>
 </head>
 <body>
-    <h2>Belajar GIT dari Branch Master</h2>
+    <h1>Haaai</h1>
 </body>
 </html>
