--- a/master.html
+++ b/master.html
@@ -6,6 +6,6 @@
     <title>Branch Master</title>
 </head>
 <body>
-    <h2>Belajar GIT dari Branch Master</h2>
+    <h3>List Users</h3>
 </body>
 </html>
